--- a/FrontendRVA1/src/app/app.component.html
+++ b/FrontendRVA1/src/app/app.component.html
@@ -1,10 +1,9 @@
-<!-- <app-vozilo></app-vozilo>
-<button mat-button>Press</button> -->
+
 <mat-sidenav-container class="example-container">
   <mat-sidenav mode="over" [fixedInViewport]="true" opened mode="side">
     <mat-accordion>
       <a mat-button style="text-align: center">
-        <mat-icon>
+        <mat-icon [routerLink]="['/home']">
           Home
         </mat-icon>
       </a>
@@ -18,13 +17,13 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <a mat-button>Artikl</a>
+          <a [routerLink]="['/klijent']" mat-button>Klijent</a>
         </mat-nav-list>
         <mat-nav-list>
-          <a mat-button>Dobavljač</a>
+          <a [routerLink]="['/kredit']" mat-button>Kredit</a>
         </mat-nav-list>
         <mat-nav-list>
-          <a mat-button>Porudžbina</a>
+          <a [routerLink]="['/tipRacuna']" mat-button>Tip računa</a>
         </mat-nav-list>
       </mat-expansion-panel>
       <mat-expansion-panel>
@@ -37,15 +36,16 @@
           </mat-panel-description>
         </mat-expansion-panel-header>
         <mat-nav-list>
-          <a mat-button>Početna</a>
+          <a [routerLink]="['/home']" mat-button>Početna</a>
         </mat-nav-list>
         <mat-nav-list>
-          <a mat-button>Autor</a>
+          <a [routerLink]="['/author']" mat-button>Autor</a>
         </mat-nav-list>
         <mat-nav-list>
-          <a mat-button>O nama</a>
+          <a [routerLink]="['/about']" mat-button>O nama</a>
         </mat-nav-list>
       </mat-expansion-panel>
     </mat-accordion>
   </mat-sidenav>
+  <router-outlet></router-outlet>
 </mat-sidenav-container>
