--- a/FrontendRVA1/src/app/components/dialogs/tip-racuna-dialog/tip-racuna-dialog.component.html
+++ b/FrontendRVA1/src/app/components/dialogs/tip-racuna-dialog/tip-racuna-dialog.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <h3 mat-dialog-title *ngIf="flag == 1">Dodavanje tipa računa</h3>
-  <h3 mat-dialog-title *ngIf="flag == 2">Modifikacija tip računa: {{data.oznaka}}</h3>
+  <h3 mat-dialog-title *ngIf="flag == 2">Modifikacija tipa računa: {{data.oznaka}}</h3>
   <h3 mat-dialog-title *ngIf="flag == 3">Brisanje tipa računa: {{data.oznaka}}</h3>
   <form class="mat-dialog-content" #formControl="ngForm">
     <div class="form">
@@ -11,14 +11,16 @@
 
     <div class="form">
       <mat-form-field>
-        <input matInput placeholder="Oznaka" [(ngModel)]="data.oznaka" name="oznaka" [disabled]="flag == 3">
-      </mat-form-field>
-    </div>
-    <div class="form">
-      <mat-form-field>
         <input matInput placeholder="Opis" [(ngModel)]="data.opis" name="opis" [disabled]="flag == 3">
       </mat-form-field>
     </div>
+
+    <div class="form">
+      <mat-form-field>
+        <input matInput placeholder="Oznaka" [(ngModel)]="data.oznaka" name="oznaka" [disabled]="flag == 3">
+      </mat-form-field>
+    </div>
+
     <div mat-dialog-actions>
       <button mat-button *ngIf="flag == 1" type="submit" [mat-dialog-close]="1" (click)="add()" [disabled]="!formControl.valid">Sačuvaj</button>
       <button mat-button *ngIf="flag == 2" type="submit" [mat-dialog-close]="1" (click)="update()" [disabled]="!formControl.valid">Sačuvaj</button>
