--- a/FrontendRVA1/src/app/components/klijent/klijent.component.html
+++ b/FrontendRVA1/src/app/components/klijent/klijent.component.html
@@ -29,7 +29,7 @@
       <mat-cell *matCellDef="let row"> {{ row.prezime }}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="broj_lk">
+    <ng-container matColumnDef="brojLk">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Broj_lk</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{ row.brojLk }}</mat-cell>
     </ng-container>
@@ -39,7 +39,7 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header
         >Kredit</mat-header-cell
       >
-      <mat-cell *matCellDef="let row"> {{ row.kredit.oznaka }}</mat-cell>
+      <mat-cell *matCellDef="let row"> {{ row.kredit.id }}</mat-cell>
     </ng-container>
 
     <!-- actions -->
@@ -51,10 +51,10 @@
       </mat-header-cell>
 
       <mat-cell *matCellDef="let row; let i = index" >
-        <button mat-icon-button color="primary" (click)="openDialog(2, row.id, row.ime, row.prezime, row.broj_lk, row.kredit)">
+        <button mat-icon-button color="primary" (click)="openDialog(2, row.id, row.ime, row.prezime, row.brojLk, row.kredit)">
           <mat-icon aria-label="Edit">edit</mat-icon>
         </button>
-        <button mat-icon-button color="primary" (click)="openDialog(3, row.id, row.ime, row.prezime, row.broj_lk, row.kredit)">
+        <button mat-icon-button color="primary" (click)="openDialog(3, row.id, row.ime, row.prezime, row.brojLk, row.kredit)">
           <mat-icon aria-label="Delete">delete</mat-icon>
         </button>
       </mat-cell>
