--- a/FrontendRVA1/src/app/components/tip-racuna/tip-racuna.component.html
+++ b/FrontendRVA1/src/app/components/tip-racuna/tip-racuna.component.html
@@ -24,15 +24,17 @@
       <mat-cell *matCellDef="let row"> {{ row.naziv }}</mat-cell>
     </ng-container>
 
+    <ng-container matColumnDef="opis">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Opis</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{ row.opis }}</mat-cell>
+    </ng-container>
+
+
     <ng-container matColumnDef="oznaka">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Oznaka</mat-header-cell>
       <mat-cell *matCellDef="let row"> {{ row.oznaka }}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="opis">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Opis</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{ row.opis }}</mat-cell>
-    </ng-container>
 
     <!-- actions -->
     <ng-container matColumnDef="actions">
@@ -43,10 +45,10 @@
       </mat-header-cell>
 
       <mat-cell *matCellDef="let row; let i = index">
-        <button mat-icon-button color="primary"(click)="openDialog(2,row.ime,row.prezime,row.broj_lk,row.kredit)" >
+        <button mat-icon-button color="primary"(click)="openDialog(2,row.id,row.naziv,row.opis,row.oznaka)" >
           <mat-icon aria-label="Edit">edit</mat-icon>
         </button>
-        <button mat-icon-button color="primary" (click)="openDialog(3,row.ime,row.prezime,row.broj_lk,row.kredit)">
+        <button mat-icon-button color="primary" (click)="openDialog(3,row.id,row.naziv,row.opis,row.oznaka)">
           <mat-icon aria-label="Delete">delete</mat-icon>
         </button>
       </mat-cell>
