--- a/FrontendRVA1/src/app/components/core/about/about.component.html
+++ b/FrontendRVA1/src/app/components/core/about/about.component.html
@@ -1,5 +1,36 @@
-<<<<<<< HEAD
-
-=======
-<p>about works!</p>
->>>>>>> 199ca2d1dc634586d1c29ea23766d3ccdcc0f6b0
+<h1>Opis aplikacije</h1>
+<h2>Opis baze</h2>
+<p>Baza se sastoji od četiri tabele: kredit, klijent, račun i tip računa. Za kredit i tip računa
+  prikaz je id, naziv, oznaka i opis. Za svakog klijenta je poznat id, ime, prezime, broj lične karte i koji kredit ima,
+  dok za račun u bazi se nalaze podaci o idju, nazivu, oznaci, tipu računa kom pripada i klijentu koji ga ima.
+</p>
+<h2>Opis korišćenih tehnologija</h2>
+<h3>PostgreSQL</h3>
+<p>PostgreSQL je objektno-relacioni sistem za upravljanje bazama podataka, baziran na POSTGRES verziji 4.21, razvijenog na Univerzitetu Kalifornija u odeljenju za računarske nauke Berkli.
+  POSTGRES je bio pionir u nekim konceptima koje su postale dostupne u komercijalnim bazama tek dosta kasnije.PostgreSQL može biti slobodno korišćen, modifikovan i distribuiran od strane svakog korisnika za bilo kakvu upotrebu, bila ona privatna, komercijalna ili akademska.
+  Podržava veliki deo SQL standarda i obezbeđuje mnoge savremene karakteristike:
+</p>
+  <ul>
+  <li>kompleksne upite</li>
+  <li>strane ključeve (foreign keys)</li>
+  <li>trigere</li>
+  <li>preglede (views)</li>
+  </ul>
+  <h3>Spring</h3>
+  <p> Spring je radni okvir otvorenog koda (engl. open source) zasnovan na Java programskom jeziku. Spring omogućava efikasan razvoj aplikacija srednjeg sloja.
+    pring Inversion of Control (IoC) kontejner omogućava:</p>
+    <ul>
+      <li>instanciranje</li>
+      <li>konfigurisanje</li>
+      <li>povezivanje objekata klasa Spring aplikacije</li>
+      </ul>
+    <p>Povezivanje objekata vrši primenom injekcije zavisnosti (engl. dependency
+    injection - DI).
+    </p>
+  <h3>Angular</h3>
+  <p>Angular okvir napisan je programskom jeziku TypeScript, razvijenom od strane Microsofta. Njegova je svrha nadomjestiti nedostatke JavaScript-a, zato se često u literaturi
+    TypeScript naziva nadskup JavaScript-a. TypeScript nije jezik kojeg preglednici mogu interpretirati, stoga se TypeScript kod prevodi (eng. compile) u JavaScript kod. TypeScript
+    omogućava strogo tipiziranje (eng. strong typing) nad JavaScript kodom, tj. možemo deklarirati tipove podataka. Time je omogućena provjera nad tipovima podataka prilikom
+    prevođenja koda kako ne bi došlo do greške prilikom izvršavanja koda. Uz strogo tipiziranje i otkrivanje grešaka prilikom prevođenja, najvrijednija nadopuna JavaScript kodu jest
+    uvođenje mehanizama objektno-orijentiranog programiranja.
+    </p>
