--- a/FrontendRVA1/src/app/components/core/author/author.component.html
+++ b/FrontendRVA1/src/app/components/core/author/author.component.html
@@ -1,1 +1,15 @@
-<p>author works!</p>
+<h1> Autor: Milica Despotović </h1>
+<p>Autor aplikacije je student treće godine osnovnih studija na Fakultetu tehničkih nauka, smjer Inženjerstvo informacionih sistema.
+U nastavku kratak opis pomenutog fakulteta i smjera.
+</p>
+  <h2>Fakultet tehničkih nauka</h2>
+  <p>Fakultet tehničkih nauka je jedna od najsavremenije organizovanih visokoobrazovnih institucija u regionu sa tradicijom dugom 59 godina, poznat i priznat u celom svetu, a inženjeri obrazovani na ovom Fakultetu, rade i postižu zapažene rezultate u svakom preduzeću koje ima veze sa tehnologijom, proizvodnjom, obrazovanjem ili uslugama, jer od svih zanimanja koja se u našoj zemlji obrazuju, tehnika je i dalje najtraženija.</p>
+
+  <h2>Inženjerstvo informacionih sistema</h2>
+  <p>Informacione i komunikacione tehnologije prožimaju sve aspekte savremenog društva i intenzivno se koriste svakodnevno i u svim sferama života. Informacioni sistemi, primenom ovih tehnologija, omogućavaju da se poslovi u preduzećima obavljaju brže, lakše, bolje i jeftinije. Maksimalni efekti se postižu kada se dobro poznaje priroda poslovanja i struktura preduzeća, što naši inženjeri sigurno znaju. Oni su naučili kako funkcioniše preduzeće i kako ga upotrebom informacionih i komunikacionih tehnologija učiniti uspešnijim. Akcenat je postavljen na osposobljavanju inženjera koji sagledavaju celinu sistema i razvijaju sposobnosti lakog prilagođavanja različitim aplikativnim domenima i primeni različitih i inovativnih metoda, tehnika i alata u oblasti informacionih i komunikacionih tehnologija.</p>
+
+  <h2>Kontakt</h2>
+  <p>milica.despotovic981@gmail.com <br>
+  <a href="https://github.com/Milica775">https://github.com/Milica775</a>
+  </p>
+
