--- a/FrontendRVA1/src/app/components/core/home/home.component.html
+++ b/FrontendRVA1/src/app/components/core/home/home.component.html
@@ -1,1 +1,24 @@
-<p>home works!</p>
+<h1>Početna strana</h1>
+<p>Aplikacija omogućava uvid, dodavanje, modifikaciju i brisanje podataka koji se nalaze u bazi podataka. U bazi podataka
+  se smještaju podaci vezani za bankarski sistem. Aplikacija je osmišljena tako da korisnik na što lakši i pristupačniji način
+  izvrši željene operacije ili pristupi podacima.Na stranici 'O nama' možete pročitati detaljnije informacije o bazi podataka, korišćenim tehnologijama
+i funkcionisanju aplikacije.Autor aplikacije je Milica Despotović, nešto više o tome možete pronaći na stranici 'O autoru'.</p>
+<h2>Korišteni bankarski pojmovi</h2>
+<ul>
+  <li>Kredit</li>
+  <p>Pravni odnos između poverioca, koji da neku stvar na privremeno korišćenje dužniku, i dužnika. Najzastupljeniji oblik kredita u praksi su novčani zajmovi preko bankarskog sistema.</p>
+  <li>Račun</li>
+  <p>Tekući, žiro i drugi račun za izvršenje jedne transakcije plaćanja, otvoren na osnovu ugovora između klijenta i banke.</p>
+  <li>Klijent</li>
+  <p>Označava pravna i fizička lica, koja koriste ili su koristili finansijske usluge, ili su se Banci
+    obratila radi korišćenja tih usluga, i koje je Banka kao takve identifikovala.</p>
+  <li>Tipovi računa:</li>
+  <ol>
+    <li>Tekući</li>
+    <li>Žiro</li>
+    <li>Štedni</li>
+    <li>Namjenski</li>
+    <li>Devizni</li>
+    <li>račun orčenog depozita</li>
+  </ol>
+</ul>
